# furnice

./: pyproject.toml
furnice/: model.py
tests/: test_allocate.py  test_batches.py  test_furnice.py
