[tool.poetry]
name = "furnice"
version = "0.1.0"
description = ""
authors = ["Hoon Wee <mrgravity817@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
